# gemplates

./: CMakeLists.txt
example/: CMakeLists.txt
example/sdl2-danmaku/: CMakeLists.txt  bullets.cpp  bullets.h  engine.cpp  engine.h  main.cpp
example/sdl2-pong/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
include/: cabinet.h  componentstorage.h  eventful.h  nodedon.h  propertier.h  scenery.h  typetuple.h  unrolled_list.h
test/: CMakeLists.txt  cabinet-simple.cpp  componentstorage-simple.cpp  eventful-queued.cpp  eventful-signaling.cpp  eventful-simple.cpp  nodedon-simple.cpp  scenery-simple.cpp  unrolled_list-simple.cpp
